# mlops

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml
mlops/data/: .gitignore  BankNoteAuthentication.csv.dvc
mlops/labs/: Lab_3_data_versioning.ipynb
mlops/labs/lab2/: Lab_2_exp_tracking_local.ipynb
mlops/labs/lab4/: Lab_4_containers_orchestration.ipynb
mlops/labs/lab4/mlflow_test/: Dockerfile  Lab_2_exp_tracking_local.ipynb  mlflow-deployment.yaml  mlflow-service.yaml
mlops/labs/lab5/: Dockerfile  Lab_2_exp_tracking_local.ipynb  Lab_5_exp_tracking_gcp.ipynb
mlops/labs/lab6/: Lab_6_ml_orchestration.ipynb
mlops/labs/lab7/: Lab_7_ml_orchestration_gcp.ipynb  Lab_terraform.ipynb
mlops/labs/lab8/: Dockerfile  Lab_8_deployment.ipynb  requirements.txt
mlops/labs/lab8/app/: reddit_app.py
mlops/labs/lab8/lab8app/: app.py  main.py
mlops/labs/lab8/streamlit/: app.py
mlops/labs/lab9/: Lab_9_deployment_gcp.ipynb
mlops/labs/lab9/app/: Dockerfile  logs.txt  reddit-deployment.yaml  reddit-service.yaml  requirements.txt  run.sh  temp.txt
mlops/settings/: constants.py
mlops/src/: classifier_train_more.py  counterflow.py  helloworld.py  preprocessing.py  run_scoringflow.py  scoringflow.py  scoringflowgcp.py  trainingflow.py  trainingflowgcp.py  utils.py
