[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc>=3.59.1",
    "dvc-s3>=3.2.0",
    "hyperopt>=0.2.7",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "mlflow>=2.21.3",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "setuptools>=78.1.0",
    "xgboost>=3.0.0",
]
