[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc>=3.59.1",
    "dvc-s3>=3.2.0",
    "fastapi>=0.115.12",
    "google-auth>=2.38.0",
    "google-cloud-storage>=3.1.0",
    "hyperopt>=0.2.7",
    "ipywidgets>=8.1.5",
    "joblib>=1.4.2",
    "jupyter>=1.1.1",
    "kubernetes>=32.0.1",
    "metaflow>=2.15.7",
    "mlflow>=2.21.3",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "prefect>=3.3.1",
    "pydantic>=2.11.2",
    "pylint>=3.3.6",
    "scikit-learn>=1.6.1",
    "setuptools>=78.1.0",
    "streamlit>=1.44.1",
    "tabulate>=0.9.0",
    "uvicorn>=0.34.0",
    "xgboost>=3.0.0",
]
